[gd_scene load_steps=18 format=3 uid="uid://ds1vvr4x52xy0"]

[ext_resource type="Script" uid="uid://qf30sx53yw14" path="res://characters/basic_character.gd" id="1_foqfl"]
[ext_resource type="Material" uid="uid://cr7xedp6d1j6n" path="res://materials/basic_character_hover.material" id="2_j4eag"]
[ext_resource type="PackedScene" uid="uid://cum6bwi53qiry" path="res://assets/poly_pizza/punk_by_quaterniuns/Punk+Mixamo+MaterialAnimRenamed.glb" id="3_ec0y7"]
[ext_resource type="AnimationLibrary" uid="uid://bc0a8wrejbv2f" path="res://assets/mixamo/basics.glb" id="4_h1mmq"]
[ext_resource type="Material" uid="uid://ck185j78tuepo" path="res://materials/select.material" id="4_y17i2"]

[sub_resource type="Animation" id="Animation_kk2t4"]
resource_name = "t-pose"
length = 0.06666667
tracks/0/type = "position_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("%GeneralSkeleton:Hips")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1.6430118e-05, 1.0008693, -0.012094659)
tracks/1/type = "rotation_3d"
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/path = NodePath("%GeneralSkeleton:Hips")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 2.0563602e-06, 5.2541e-06, -0.00016780161, 1)
tracks/2/type = "rotation_3d"
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/path = NodePath("%GeneralSkeleton:Spine")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -2.000481e-06, -5.2542064e-06, 0.00016780166, 0.99999994)
tracks/3/type = "rotation_3d"
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/path = NodePath("%GeneralSkeleton:LeftShoulder")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0.49651065, 0.5034653, 0.49651065, -0.5034652)
tracks/4/type = "rotation_3d"
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/path = NodePath("%GeneralSkeleton:LeftUpperArm")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, -0.005305916, 0.9980278, 0.06254989, -0.00022158027)
tracks/5/type = "rotation_3d"
tracks/5/imported = true
tracks/5/enabled = true
tracks/5/path = NodePath("%GeneralSkeleton:LeftLowerArm")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 0.010503836, -0.69859946, -0.08616358, 0.7102281)
tracks/6/type = "rotation_3d"
tracks/6/imported = true
tracks/6/enabled = true
tracks/6/path = NodePath("%GeneralSkeleton:LeftHand")
tracks/6/interp = 0
tracks/6/loop_wrap = true
tracks/6/keys = PackedFloat32Array(0, 1, 0.040061403, 0.7026916, 0.01055726, 0.71028715)
tracks/7/type = "rotation_3d"
tracks/7/imported = true
tracks/7/enabled = true
tracks/7/path = NodePath("%GeneralSkeleton:LeftThumbMetacarpal")
tracks/7/interp = 0
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(0, 1, -0.10298603, 0.73903, 0.16483161, 0.6450267)
tracks/8/type = "rotation_3d"
tracks/8/imported = true
tracks/8/enabled = true
tracks/8/path = NodePath("%GeneralSkeleton:LeftThumbProximal")
tracks/8/interp = 0
tracks/8/loop_wrap = true
tracks/8/keys = PackedFloat32Array(0, 1, -0.037798926, -0.0076141064, 0.020425081, 0.9990476)
tracks/9/type = "rotation_3d"
tracks/9/imported = true
tracks/9/enabled = true
tracks/9/path = NodePath("%GeneralSkeleton:LeftThumbDistal")
tracks/9/interp = 0
tracks/9/loop_wrap = true
tracks/9/keys = PackedFloat32Array(0, 1, -0.0744948, -0.010779545, 0.07267964, 0.99451107)
tracks/10/type = "scale_3d"
tracks/10/imported = true
tracks/10/enabled = true
tracks/10/path = NodePath("%GeneralSkeleton:LeftThumbDistal")
tracks/10/interp = 0
tracks/10/loop_wrap = true
tracks/10/keys = PackedFloat32Array(0, 1, 1.0000117, 0.99998873, 1.0000001)
tracks/11/type = "rotation_3d"
tracks/11/imported = true
tracks/11/enabled = true
tracks/11/path = NodePath("%GeneralSkeleton:LeftIndexProximal")
tracks/11/interp = 0
tracks/11/loop_wrap = true
tracks/11/keys = PackedFloat32Array(0, 1, 0.0122421235, 0.00086684525, 0.0073447376, 0.9998977)
tracks/12/type = "rotation_3d"
tracks/12/imported = true
tracks/12/enabled = true
tracks/12/path = NodePath("%GeneralSkeleton:LeftIndexIntermediate")
tracks/12/interp = 0
tracks/12/loop_wrap = true
tracks/12/keys = PackedFloat32Array(0, 1, 0.018986732, 0.00060136616, -0.00024044514, 0.9998194)
tracks/13/type = "rotation_3d"
tracks/13/imported = true
tracks/13/enabled = true
tracks/13/path = NodePath("%GeneralSkeleton:LeftIndexDistal")
tracks/13/interp = 0
tracks/13/loop_wrap = true
tracks/13/keys = PackedFloat32Array(0, 1, 0.07967906, 0.0025233328, -0.0010173619, 0.9968168)
tracks/14/type = "rotation_3d"
tracks/14/imported = true
tracks/14/enabled = true
tracks/14/path = NodePath("%GeneralSkeleton:LeftMiddleProximal")
tracks/14/interp = 0
tracks/14/loop_wrap = true
tracks/14/keys = PackedFloat32Array(0, 1, 0.042477816, 0.0032922179, 0.032737687, 0.99855566)
tracks/15/type = "rotation_3d"
tracks/15/imported = true
tracks/15/enabled = true
tracks/15/path = NodePath("%GeneralSkeleton:LeftMiddleIntermediate")
tracks/15/interp = 0
tracks/15/loop_wrap = true
tracks/15/keys = PackedFloat32Array(0, 1, -0.009323806, 0.0001860261, 8.696318e-05, 0.9999564)
tracks/16/type = "rotation_3d"
tracks/16/imported = true
tracks/16/enabled = true
tracks/16/path = NodePath("%GeneralSkeleton:LeftMiddleDistal")
tracks/16/interp = 0
tracks/16/loop_wrap = true
tracks/16/keys = PackedFloat32Array(0, 1, -0.030921176, 0.0006161928, 0.00028263032, 0.9995218)
tracks/17/type = "rotation_3d"
tracks/17/imported = true
tracks/17/enabled = true
tracks/17/path = NodePath("%GeneralSkeleton:LeftRingProximal")
tracks/17/interp = 0
tracks/17/loop_wrap = true
tracks/17/keys = PackedFloat32Array(0, 1, -0.005384177, 0.0035567135, 0.09705515, 0.99525833)
tracks/18/type = "rotation_3d"
tracks/18/imported = true
tracks/18/enabled = true
tracks/18/path = NodePath("%GeneralSkeleton:LeftRingIntermediate")
tracks/18/interp = 0
tracks/18/loop_wrap = true
tracks/18/keys = PackedFloat32Array(0, 1, 0.030569628, -0.004537195, 9.74834e-05, 0.9995223)
tracks/19/type = "rotation_3d"
tracks/19/imported = true
tracks/19/enabled = true
tracks/19/path = NodePath("%GeneralSkeleton:LeftRingDistal")
tracks/19/interp = 0
tracks/19/loop_wrap = true
tracks/19/keys = PackedFloat32Array(0, 1, 0.019653276, -0.0029167682, 6.279349e-05, 0.9998027)
tracks/20/type = "rotation_3d"
tracks/20/imported = true
tracks/20/enabled = true
tracks/20/path = NodePath("%GeneralSkeleton:LeftLittleProximal")
tracks/20/interp = 0
tracks/20/loop_wrap = true
tracks/20/keys = PackedFloat32Array(0, 1, 0.03810048, 0.008688018, 0.1754026, 0.983721)
tracks/21/type = "rotation_3d"
tracks/21/imported = true
tracks/21/enabled = true
tracks/21/path = NodePath("%GeneralSkeleton:LeftLittleIntermediate")
tracks/21/interp = 0
tracks/21/loop_wrap = true
tracks/21/keys = PackedFloat32Array(0, 1, -0.027278721, 0.008605123, -0.0005534291, 0.99959064)
tracks/22/type = "rotation_3d"
tracks/22/imported = true
tracks/22/enabled = true
tracks/22/path = NodePath("%GeneralSkeleton:LeftLittleDistal")
tracks/22/interp = 0
tracks/22/loop_wrap = true
tracks/22/keys = PackedFloat32Array(0, 1, 0.08513507, -0.02686052, 0.0016485155, 0.9960059)
tracks/23/type = "rotation_3d"
tracks/23/imported = true
tracks/23/enabled = true
tracks/23/path = NodePath("%GeneralSkeleton:RightShoulder")
tracks/23/interp = 0
tracks/23/loop_wrap = true
tracks/23/keys = PackedFloat32Array(0, 1, 0.4965036, -0.5034723, -0.496504, -0.5034717)
tracks/24/type = "rotation_3d"
tracks/24/imported = true
tracks/24/enabled = true
tracks/24/path = NodePath("%GeneralSkeleton:RightUpperArm")
tracks/24/interp = 0
tracks/24/loop_wrap = true
tracks/24/keys = PackedFloat32Array(0, 1, 0.0049231946, 0.9980297, 0.06254992, 0.00020554662)
tracks/25/type = "rotation_3d"
tracks/25/imported = true
tracks/25/enabled = true
tracks/25/path = NodePath("%GeneralSkeleton:RightLowerArm")
tracks/25/interp = 0
tracks/25/loop_wrap = true
tracks/25/keys = PackedFloat32Array(0, 1, 0.008254588, 0.69820195, 0.08836497, 0.7103782)
tracks/26/type = "rotation_3d"
tracks/26/imported = true
tracks/26/enabled = true
tracks/26/path = NodePath("%GeneralSkeleton:RightHand")
tracks/26/interp = 0
tracks/26/loop_wrap = true
tracks/26/keys = PackedFloat32Array(0, 1, 0.042129554, -0.71901697, -0.018975638, 0.69345504)
tracks/27/type = "rotation_3d"
tracks/27/imported = true
tracks/27/enabled = true
tracks/27/path = NodePath("%GeneralSkeleton:RightThumbMetacarpal")
tracks/27/interp = 0
tracks/27/loop_wrap = true
tracks/27/keys = PackedFloat32Array(0, 1, -0.1177157, -0.73185164, -0.16327257, 0.6510592)
tracks/28/type = "rotation_3d"
tracks/28/imported = true
tracks/28/enabled = true
tracks/28/path = NodePath("%GeneralSkeleton:RightThumbProximal")
tracks/28/interp = 0
tracks/28/loop_wrap = true
tracks/28/keys = PackedFloat32Array(0, 1, -0.03183937, 0.0034093414, -0.034417093, 0.99889445)
tracks/29/type = "rotation_3d"
tracks/29/imported = true
tracks/29/enabled = true
tracks/29/path = NodePath("%GeneralSkeleton:RightThumbDistal")
tracks/29/interp = 0
tracks/29/loop_wrap = true
tracks/29/keys = PackedFloat32Array(0, 1, -0.12490851, 0.027008772, -0.032123625, 0.9912804)
tracks/30/type = "rotation_3d"
tracks/30/imported = true
tracks/30/enabled = true
tracks/30/path = NodePath("%GeneralSkeleton:RightIndexProximal")
tracks/30/interp = 0
tracks/30/loop_wrap = true
tracks/30/keys = PackedFloat32Array(0, 1, 0.026084185, -0.0005566627, 0.012085289, 0.99958646)
tracks/31/type = "rotation_3d"
tracks/31/imported = true
tracks/31/enabled = true
tracks/31/path = NodePath("%GeneralSkeleton:RightIndexIntermediate")
tracks/31/interp = 0
tracks/31/loop_wrap = true
tracks/31/keys = PackedFloat32Array(0, 1, -0.0007646084, 4.518032e-05, -2.1576881e-05, 0.99999964)
tracks/32/type = "rotation_3d"
tracks/32/imported = true
tracks/32/enabled = true
tracks/32/path = NodePath("%GeneralSkeleton:RightIndexDistal")
tracks/32/interp = 0
tracks/32/loop_wrap = true
tracks/32/keys = PackedFloat32Array(0, 1, 0.045776665, -0.0027028322, 0.0012806654, 0.99894726)
tracks/33/type = "rotation_3d"
tracks/33/imported = true
tracks/33/enabled = true
tracks/33/path = NodePath("%GeneralSkeleton:RightMiddleProximal")
tracks/33/interp = 0
tracks/33/loop_wrap = true
tracks/33/keys = PackedFloat32Array(0, 1, 0.04833594, -0.0025005788, -0.020685658, 0.9986136)
tracks/34/type = "rotation_3d"
tracks/34/imported = true
tracks/34/enabled = true
tracks/34/path = NodePath("%GeneralSkeleton:RightMiddleIntermediate")
tracks/34/interp = 0
tracks/34/loop_wrap = true
tracks/34/keys = PackedFloat32Array(0, 1, -0.01409246, -0.00010046363, -0.0002721399, 0.99990064)
tracks/35/type = "rotation_3d"
tracks/35/imported = true
tracks/35/enabled = true
tracks/35/path = NodePath("%GeneralSkeleton:RightMiddleDistal")
tracks/35/interp = 0
tracks/35/loop_wrap = true
tracks/35/keys = PackedFloat32Array(0, 1, 0.0013193339, 8.925796e-06, 2.1189451e-05, 0.99999905)
tracks/36/type = "rotation_3d"
tracks/36/imported = true
tracks/36/enabled = true
tracks/36/path = NodePath("%GeneralSkeleton:RightRingProximal")
tracks/36/interp = 0
tracks/36/loop_wrap = true
tracks/36/keys = PackedFloat32Array(0, 1, 0.026773304, -0.004071802, -0.090243906, 0.9955515)
tracks/37/type = "rotation_3d"
tracks/37/imported = true
tracks/37/enabled = true
tracks/37/path = NodePath("%GeneralSkeleton:RightRingIntermediate")
tracks/37/interp = 0
tracks/37/loop_wrap = true
tracks/37/keys = PackedFloat32Array(0, 1, -0.0013590157, -0.00019797683, -5.5134296e-06, 0.99999917)
tracks/38/type = "rotation_3d"
tracks/38/imported = true
tracks/38/enabled = true
tracks/38/path = NodePath("%GeneralSkeleton:RightRingDistal")
tracks/38/interp = 0
tracks/38/loop_wrap = true
tracks/38/keys = PackedFloat32Array(0, 1, 0.03452511, 0.0050299317, 0.00013002753, 0.9993913)
tracks/39/type = "rotation_3d"
tracks/39/imported = true
tracks/39/enabled = true
tracks/39/path = NodePath("%GeneralSkeleton:RightLittleProximal")
tracks/39/interp = 0
tracks/39/loop_wrap = true
tracks/39/keys = PackedFloat32Array(0, 1, 0.07554871, -0.008767128, -0.1747979, 0.98166245)
tracks/40/type = "rotation_3d"
tracks/40/imported = true
tracks/40/enabled = true
tracks/40/path = NodePath("%GeneralSkeleton:RightLittleIntermediate")
tracks/40/interp = 0
tracks/40/loop_wrap = true
tracks/40/keys = PackedFloat32Array(0, 1, -0.044268712, -0.014491022, 0.0007996708, 0.99891436)
tracks/41/type = "rotation_3d"
tracks/41/imported = true
tracks/41/enabled = true
tracks/41/path = NodePath("%GeneralSkeleton:RightLittleDistal")
tracks/41/interp = 0
tracks/41/loop_wrap = true
tracks/41/keys = PackedFloat32Array(0, 1, -0.02256371, -0.007384628, 0.0004210919, 0.9997181)
tracks/42/type = "rotation_3d"
tracks/42/imported = true
tracks/42/enabled = true
tracks/42/path = NodePath("%GeneralSkeleton:LeftUpperLeg")
tracks/42/interp = 0
tracks/42/loop_wrap = true
tracks/42/keys = PackedFloat32Array(0, 1, -0.0001239294, 0.004392098, -0.9995846, -0.028483205)
tracks/43/type = "rotation_3d"
tracks/43/imported = true
tracks/43/enabled = true
tracks/43/path = NodePath("%GeneralSkeleton:LeftLowerLeg")
tracks/43/interp = 0
tracks/43/loop_wrap = true
tracks/43/keys = PackedFloat32Array(0, 1, -1.765415e-05, 0.9994298, -0.03375599, 0.00094865484)
tracks/44/type = "rotation_3d"
tracks/44/imported = true
tracks/44/enabled = true
tracks/44/path = NodePath("%GeneralSkeleton:LeftFoot")
tracks/44/interp = 0
tracks/44/loop_wrap = true
tracks/44/keys = PackedFloat32Array(0, 1, 0.020157961, 0.67931855, -0.7332853, -0.020312732)
tracks/45/type = "rotation_3d"
tracks/45/imported = true
tracks/45/enabled = true
tracks/45/path = NodePath("%GeneralSkeleton:RightUpperLeg")
tracks/45/interp = 0
tracks/45/loop_wrap = true
tracks/45/keys = PackedFloat32Array(0, 1, -0.0001621732, -0.005605751, 0.999569, -0.028815987)
tracks/46/type = "rotation_3d"
tracks/46/imported = true
tracks/46/enabled = true
tracks/46/path = NodePath("%GeneralSkeleton:RightLowerLeg")
tracks/46/interp = 0
tracks/46/loop_wrap = true
tracks/46/keys = PackedFloat32Array(0, 1, 1.3809651e-05, 0.9995468, -0.030091738, -0.0008070278)
tracks/47/type = "rotation_3d"
tracks/47/imported = true
tracks/47/enabled = true
tracks/47/path = NodePath("%GeneralSkeleton:RightFoot")
tracks/47/interp = 0
tracks/47/loop_wrap = true
tracks/47/keys = PackedFloat32Array(0, 1, -0.02016612, 0.68111694, -0.7316152, 0.020310974)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_istsk"]
_data = {
&"t-pose": SubResource("Animation_kk2t4")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ec0y7"]
animation = &"basics/man-idle-1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mwdhn"]
animation = &"basics/man-walk-1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h1mmq"]
animation = &"t-pose"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_evkh4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eqvbs"]
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dy4nq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5xlpi"]
advance_mode = 2
advance_condition = &"is_idling"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_tic5k"]
states/Start/position = Vector2(196, 100)
states/basics_man-idle-1/node = SubResource("AnimationNodeAnimation_ec0y7")
states/basics_man-idle-1/position = Vector2(512, 51)
states/basics_man-walk-1/node = SubResource("AnimationNodeAnimation_mwdhn")
states/basics_man-walk-1/position = Vector2(512, 158)
states/t-pose/node = SubResource("AnimationNodeAnimation_h1mmq")
states/t-pose/position = Vector2(326, 100)
transitions = ["Start", "t-pose", SubResource("AnimationNodeStateMachineTransition_evkh4"), "basics_man-idle-1", "basics_man-walk-1", SubResource("AnimationNodeStateMachineTransition_eqvbs"), "t-pose", "basics_man-idle-1", SubResource("AnimationNodeStateMachineTransition_dy4nq"), "basics_man-walk-1", "basics_man-idle-1", SubResource("AnimationNodeStateMachineTransition_5xlpi")]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_j4eag"]
margin = 0.0
height = 1.75
radius = 0.4

[sub_resource type="TorusMesh" id="TorusMesh_e5k0y"]
material = ExtResource("4_y17i2")
inner_radius = 0.4
outer_radius = 0.5
rings = 8
ring_segments = 3

[node name="BasicCharacter" type="CharacterBody3D" groups=["Human"]]
script = ExtResource("1_foqfl")
_hover_material = ExtResource("2_j4eag")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.1
target_desired_distance = 0.1
avoidance_enabled = true
debug_enabled = true

[node name="Character" parent="." instance=ExtResource("3_ec0y7")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0, 0)

[node name="GeneralSkeleton" parent="Character/Armature" index="0"]
bones/0/position = Vector3(0.00060343795, 1.0364169, -0.014573354)
bones/0/rotation = Quaternion(-0.032074407, -0.044341367, -0.026659716, 0.99814546)
bones/1/rotation = Quaternion(0.03228108, 0.017037509, 0.024107417, 0.99904287)
bones/2/rotation = Quaternion(0.0107125975, 0.0042106016, 0.013919536, 0.9998369)
bones/3/rotation = Quaternion(0.01048979, 0.0044062734, 0.01393713, 0.9998382)
bones/4/rotation = Quaternion(0.04958259, -0.0020572941, 0.0033474965, 0.99876237)
bones/5/rotation = Quaternion(-0.07387614, 0.007604651, -0.0019291174, 0.9972366)
bones/7/rotation = Quaternion(0.45814872, 0.49853796, 0.63440496, -0.372948)
bones/8/rotation = Quaternion(0.12581521, 0.8052986, -0.56619483, -0.1228342)
bones/9/rotation = Quaternion(0.009681941, -0.7070406, 0.009681909, 0.7070405)
bones/10/rotation = Quaternion(0.052188445, 0.47606456, -0.011834061, 0.87778074)
bones/11/rotation = Quaternion(-0.23049846, 0.682892, 0.17170016, 0.6716011)
bones/12/rotation = Quaternion(0.20149414, 0.20389253, -0.059591357, 0.9561783)
bones/13/rotation = Quaternion(0.040012974, -0.052875854, -0.12858777, 0.9894788)
bones/15/rotation = Quaternion(0.06621664, 0.00073310744, 0.008431048, 0.9977694)
bones/16/rotation = Quaternion(0.15099794, 5.9604645e-08, -0.015473723, 0.988413)
bones/17/rotation = Quaternion(0.07008203, -1.4901159e-08, -0.0071817925, 0.99751544)
bones/19/rotation = Quaternion(0.13653119, -0.003835917, -0.02295238, 0.9903625)
bones/20/rotation = Quaternion(0.15125468, 0, -0.015500065, 0.9883733)
bones/21/rotation = Quaternion(0.15993275, 7.45058e-08, -0.016389368, 0.9869919)
bones/23/rotation = Quaternion(0.18325114, -0.004652977, -0.03145516, 0.9825518)
bones/24/rotation = Quaternion(0.18138774, 5.960465e-08, -0.018587949, 0.9832361)
bones/25/rotation = Quaternion(0.15521294, 4.4703476e-08, -0.015905796, 0.987753)
bones/27/rotation = Quaternion(0.23386702, -0.003505588, -0.049008615, 0.9710263)
bones/28/rotation = Quaternion(0.15125798, 7.4505806e-08, -0.015500456, 0.98837286)
bones/29/rotation = Quaternion(0.14349763, -4.470349e-08, -0.014705183, 0.9895414)
bones/31/rotation = Quaternion(0.4749179, -0.4792426, -0.6385677, -0.37014976)
bones/32/rotation = Quaternion(-0.14848284, 0.82825816, -0.49538898, 0.2157107)
bones/33/rotation = Quaternion(0.040716827, 0.7059335, -0.040716812, 0.70593363)
bones/34/rotation = Quaternion(0.04206414, -0.56872493, 0.035966113, 0.82066375)
bones/35/rotation = Quaternion(-0.24051961, -0.67193, -0.18474664, 0.6756694)
bones/36/rotation = Quaternion(0.23822702, -0.20985506, 0.051183697, 0.94688386)
bones/37/rotation = Quaternion(0.045545507, 0.046079237, 0.16169323, 0.984712)
bones/39/rotation = Quaternion(0.059512988, -0.000991374, -0.010975924, 0.9981667)
bones/40/rotation = Quaternion(0.15128763, -1.04308114e-07, 0.012324242, 0.988413)
bones/41/rotation = Quaternion(0.07021622, 2.9802322e-08, 0.00571993, 0.9975154)
bones/43/rotation = Quaternion(0.13051496, 0.0036896458, 0.018922146, 0.9912589)
bones/44/rotation = Quaternion(0.15154469, 2.9802319e-08, 0.012345104, 0.9883733)
bones/45/rotation = Quaternion(0.16023949, -2.9802326e-08, 0.013053449, 0.98699194)
bones/47/rotation = Quaternion(0.17745195, 0.004501565, 0.02645891, 0.9837634)
bones/48/rotation = Quaternion(0.18173556, 1.0430813e-07, 0.014804572, 0.983236)
bones/49/rotation = Quaternion(0.15551047, -7.4505806e-08, 0.012668312, 0.9877531)
bones/51/rotation = Quaternion(0.22849354, 0.0034029179, 0.04298057, 0.9725903)
bones/52/rotation = Quaternion(0.15154794, 5.960466e-08, 0.012345496, 0.9883729)
bones/53/rotation = Quaternion(0.14377284, -2.9802319e-08, 0.011711924, 0.9895414)
bones/55/rotation = Quaternion(0.1390774, 0.061151724, 0.98574793, -0.07224252)
bones/56/rotation = Quaternion(-0.037963204, 0.9928489, -0.11288367, 0.008209681)
bones/57/rotation = Quaternion(-0.04121462, 0.69582206, -0.7153118, 0.04961898)
bones/58/rotation = Quaternion(-2.8317412e-08, 0.99907523, 0.042996228, 2.5683235e-08)
bones/60/rotation = Quaternion(-0.091972835, -0.01668922, 0.9950521, -0.033672377)
bones/61/rotation = Quaternion(0.03607054, 0.99232143, -0.084280625, -0.08303058)
bones/62/rotation = Quaternion(0.009187694, 0.65882504, -0.75162256, -0.030477237)
bones/63/rotation = Quaternion(-2.120648e-07, 0.99807036, 0.062094517, -7.250898e-09)

[node name="AnimationPlayer" parent="Character" index="1"]
libraries = {
&"": SubResource("AnimationLibrary_istsk"),
&"basics": ExtResource("4_h1mmq")
}
speed_scale = 0.8

[node name="AnimationTree" type="AnimationTree" parent="Character"]
tree_root = SubResource("AnimationNodeStateMachine_tic5k")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/is_idling = true
parameters/conditions/is_walking = false

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CylinderShape3D_j4eag")

[node name="SelectedEffect" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="SelectedEffect"]
mesh = SubResource("TorusMesh_e5k0y")
skeleton = NodePath("../..")

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]

[editable path="Character"]
